# advent-of-code-2023

./: .gitignore  LICENSE.txt  README.md
day01/: CMakeLists.txt  README.md  vcpkg.json
day01/apps/: CMakeLists.txt  app.cpp
day01/include/: libaoc.hpp
day01/src/: CMakeLists.txt  libaoc.cpp
day01/tests/: CMakeLists.txt  testlib.cpp
day02/: day02.sln
day02/day02/: day02.cpp  day02.vcxproj  day02.vcxproj.filters  libday02.cpp  libday02.h
day03/: day03.cpp  day03.sln  day03.vcxproj  day03.vcxproj.filters  libday03.cpp  libday03.h
day04/: day04.cpp  day04.sln  day04.vcxproj  day04.vcxproj.filters  day04mod.ixx
day05/: day05.cpp  day05.sln  day05.vcxproj  day05.vcxproj.filters  day05mod.ixx
day06/: day06.cpp  day06.sln  day06.vcxproj  day06.vcxproj.filters  day06mod.ixx
day07/: day07.cpp  day07.sln  day07.vcxproj  day07.vcxproj.filters  day07mod.ixx
day08/: day08.cpp  day08.sln  day08.vcxproj  day08.vcxproj.filters  libday08.cpp  libday08.hpp
day09/: day09.cpp  day09.sln  day09.vcxproj  day09.vcxproj.filters  libday09.cpp  libday09.hpp
